tests/untried/neg/i533/JA.java
class JA {
  public static <T> T get(T[] arr) {
    return arr[0];
  }
}